testdata/baselines/reference/compiler/tluaVarargNotPrefixExp.errors.txt
tluaVarargNotPrefixExp.tlua(6,21): error TLUA1005: ';' expected.
tluaVarargNotPrefixExp.tlua(7,22): error TLUA1005: ';' expected.
tluaVarargNotPrefixExp.tlua(7,24): error TLUA1005: ';' expected.
tluaVarargNotPrefixExp.tlua(8,23): error TLUA1005: ';' expected.
tluaVarargNotPrefixExp.tlua(8,24): error TLUA2304: Cannot find name 'x'.
tluaVarargNotPrefixExp.tlua(13,18): error TLUA1005: ',' expected.


==== tluaVarargNotPrefixExp.tlua (6 errors) ====
    // In Lua `...` is not a prefixexp: it cannot be called, indexed, or
    // member-accessed. Each of these must be a parse error rather than quietly
    // reading as a call/index/property access on the pack -- the TS spread forms
    // `...(expr)` and `...expr` are gone, and must not sneak back in as suffixes.
    function f(...: number): void
      local called = ...(1);
                        ~
!!! error TLUA1005: ';' expected.
      local indexed = ...[1];
                         ~
!!! error TLUA1005: ';' expected.
                           ~
!!! error TLUA1005: ';' expected.
      local accessed = ....x;
                          ~
!!! error TLUA1005: ';' expected.
                           ~
!!! error TLUA2304: Cannot find name 'x'.
    end
    
    // The same holds in a table constructor, where TS object spread used to live.
    function g(...: number): void
      local t = { ...({} as number) };
                     ~
!!! error TLUA1005: ',' expected.
    end
    
    // A bare `...` in each of those positions is still fine.
    function h(...: number): void
      local ok = ...;
      local t = { ... };
      f(...);
    end
    